fix: button gap text

--- a/styles.css
+++ b/styles.css
@@ -34,12 +34,12 @@ h1 {
 }
 
 button {
-  padding: 0.5rem 1rem;
+  padding: 0.3rem 1rem;
   transform-origin: center;
   border: none;
   border-radius: 5px;
   font-weight: bold;
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-family: inherit;
   cursor: pointer;
   transition: all 0.4s ease;
